Actualizo rutas de imágenes

--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                                 Pascual Bravo<br/>
                                 2024 - 2025</p>
                                 <p><strong>Certificaciones</strong><br/></p>
-                                <a href="../public/sd.jpg">Impacto Maker <br/></a>
-                                <a href="../public/sdf.jpg">Coursera <br/></a>
-                                <a href="../public/ss.jpg">Alura <br/></a>
+                                <a href="/sd.jpg">Impacto Maker <br/></a>
+                                <a href="/sdf.jpg">Coursera <br/></a>
+                                <a href="/ss.jpg">Alura <br/></a>
 
 
                                 
@@ -317,7 +317,6 @@
                     content: (
 
     <div>
-       
         <p style={{marginBottom: '20px'}}>
             Además de mis habilidades técnicas, también cuento con habilidades blandas que potencian mi desempeño profesional.
         </p>
@@ -366,7 +365,7 @@
                     content: (
                         <div>
                             <div className="project-card">
-                                <h3>🎯 E-commerce Platform</h3>
+                                <h3> E-commerce </h3>
                                 <p>Plataforma completa de comercio electrónico con React, Node.js y MongoDB. Incluye carrito de compras, pasarela de pago y panel administrativo.</p>
                                 <p><strong>Tecnologías:</strong> React, Node.js, MongoDB, Stripe</p>
                             </div>
@@ -424,7 +423,7 @@
                 <div className="container">
                     <div className="header">
                         <div className="profile-picture">
-                            <img src= "../public/Manuela Villada Salas.jpg"  alt="Foto Manuela" />
+                            <img src= "/Manuela Villada Salas.jpg"  alt="Foto Manuela" />
                         </div>
                         <h1>Manuela Villada Salas</h1>
                         <div className="subtitle">Analista en ciberseguridad</div>
